--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,28 @@
 # Database Connection
- 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/app_2
 spring.datasource.username=spring
 spring.datasource.password=spring
+spring.datasource.testWhileIdle = true
+spring.datasource.validationQuery = SELECT 1
+
+#Tomcat related configuration
+spring.datasource.tomcat.max-wait= 20000
+spring.datasource.tomcat.max-active= 50
+spring.datasource.tomcat.max-idle= 20
+spring.datasource.tomcat.min-idle= 15
+
+#JPA
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.id.new_generator_mappings = false
+spring.jpa.properties.hibernate.format_sql = true
+
+#Hibernate
+spring.jpa.show-sql = true
+spring.jpa.hibernate.ddl-auto = update
+logging.level.org.hibernate.SQL= DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder= TRACE 
+
+#Thymeleaf
+spring.thymeleaf.mode=LEGACYHTML5
+spring.thymeleaf.cache=false
